# aws-labs

./: .gitignore  README.md
001_audit-aws-with-prowler/: README.md  pyproject.toml
application-loadbalancer/: 0100_security_groups.tf  0200_acms.tf  0300_buckets.tf  0400_load_balancers.tf  README.md  data.tf  locals.tf  versions.tf
application-loadbalancer/scripts/: data.sh
